<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    app:columnCount="2"
    app:useDefaultMargins="true"
    tools:context="com.msk.adopt4k.MainActivity">

    <TextView
        android:text="@string/welcome_main"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#999"
        android:gravity="center"
        app:layout_row="0"
        app:layout_column="0"
        app:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/adopt"
        android:text="@string/main_btn_1"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="@drawable/button_bl"
        android:gravity="center"
        android:padding="15dp"
        app:layout_row="2"
        app:layout_column="0"
        app:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/main_btn_2"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="@drawable/button_or"
        android:gravity="center"
        android:padding="15dp"
        app:layout_row="3"
        app:layout_column="0"
        app:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/profile"
        android:text="VIEW YOUR PROFILE"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="@drawable/button_ne"
        android:gravity="center"
        android:padding="15dp"
        app:layout_row="4"
        app:layout_column="0"
        app:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</android.support.v7.widget.GridLayout>
